--- a/Classificador Empresas XGBOOST e GridSearch.ipynb
+++ b/Classificador Empresas XGBOOST e GridSearch.ipynb
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "avaliação=[]\n",
     "for k in empresasComNotas[\"NotaFundamentei\"]:\n",
-    "    if k>=3.0:\n",
+    "    if k>3.0:\n",
     "        avaliação.append(\"Boa\")\n",
     "    #elif (k>=3) & (k<4):\n",
     "     #   avaliação.append(\"Mediana\")\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "389              4.0       Boa"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        " 'Passivo Não Circulante']"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "Name: Avaliação, dtype: object"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,16 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metricas = [\"accuracy\",\"balanced_accuracy\",\"average_precision\"]"
+    "metricas = [\"accuracy\",\"balanced_accuracy\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "dict_keys(['objective', 'base_score', 'booster', 'colsample_bylevel', 'colsample_bynode', 'colsample_bytree', 'gamma', 'gpu_id', 'importance_type', 'interaction_constraints', 'learning_rate', 'max_delta_step', 'max_depth', 'min_child_weight', 'missing', 'monotone_constraints', 'n_estimators', 'n_jobs', 'num_parallel_tree', 'random_state', 'reg_alpha', 'reg_lambda', 'scale_pos_weight', 'subsample', 'tree_method', 'validate_parameters', 'verbosity'])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,24 +459,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\neta[0.2,0,01];\\n\\n'"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parameters = {'objective':['binary:logistic'],\n",
     "              'learning_rate': [0.05], #so called `eta` value\n",
-    "              'max_depth': [6],\n",
+    "              'max_depth': [3,4,5,6,7,8,9,10],\n",
     "              'min_child_weight': [11],\n",
     "              'subsample': [0.8],\n",
     "              'colsample_bytree': [0.7],\n",
@@ -487,17 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "clf = GridSearchCV(model, parameters, cv=5)"
+    "clf = GridSearchCV(model, parameters,scoring=metricas,refit=\"balanced_accuracy\",cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -514,19 +503,20 @@
        "                                     max_depth=None, min_child_weight=None,\n",
        "                                     missing=nan, monotone_constraints=None,\n",
        "                                     n_estimators=100, n_jobs...\n",
-       "                                     num_parallel_tree=None, random_state=None,\n",
-       "                                     reg_alpha=None, reg_lambda=None,\n",
        "                                     scale_pos_weight=None, subsample=None,\n",
        "                                     tree_method=None, validate_parameters=None,\n",
        "                                     verbosity=None),\n",
        "             param_grid={'colsample_bytree': [0.7], 'learning_rate': [0.05],\n",
-       "                         'max_depth': [6], 'min_child_weight': [11],\n",
-       "                         'missing': [-999], 'n_estimators': [1000],\n",
+       "                         'max_depth': [3, 4, 5, 6, 7, 8, 9, 10],\n",
+       "                         'min_child_weight': [11], 'missing': [-999],\n",
+       "                         'n_estimators': [1000],\n",
        "                         'objective': ['binary:logistic'], 'seed': [1337],\n",
-       "                         'subsample': [0.8]})"
+       "                         'subsample': [0.8]},\n",
+       "             refit='balanced_accuracy',\n",
+       "             scoring=['accuracy', 'balanced_accuracy'])"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +536,7 @@
        "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
        "              colsample_bynode=1, colsample_bytree=0.7, gamma=0, gpu_id=-1,\n",
        "              importance_type='gain', interaction_constraints='',\n",
-       "              learning_rate=0.05, max_delta_step=0, max_depth=6,\n",
+       "              learning_rate=0.05, max_delta_step=0, max_depth=3,\n",
        "              min_child_weight=11, missing=-999, monotone_constraints='()',\n",
        "              n_estimators=1000, n_jobs=0, num_parallel_tree=1,\n",
        "              random_state=1337, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
@@ -554,7 +544,7 @@
        "              validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +574,7 @@
        "       'Boa'], dtype=object)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +785,7 @@
        "63   BR Malls Par          BRML3              2.6      Ruim              Boa"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
